# mav_trajectory_generation

./: .gitignore  README.md
mav_trajectory_generation_sa/: CMakeLists.txt  README.md
mav_trajectory_generation_sa/include/mav_trajectory_generation/: common_mav_msgs.h  eigen_mav_msgs.h  polynomial_optimization_linear.h  segment.h  trajectory_sampling.h  vertex.h
mav_trajectory_generation_sa/include/mav_trajectory_generation/eigen-checks/: entrypoint.h  glog.h  gtest.h
mav_trajectory_generation_sa/include/mav_trajectory_generation/eigen-checks/internal/: gtest-equal.h
mav_trajectory_generation_sa/include/mav_trajectory_generation/example/: example_planner.h  example_planner_4dof.h
mav_trajectory_generation_sa/include/mav_trajectory_generation/pybindings/: trajectory_planner_4dof.h
mav_trajectory_generation_sa/src/: eigen-checks.cc  polynomial.cpp  segment.cpp  trajectory.cpp
mav_trajectory_generation_sa/src/example/: example_planner.cc  example_planner_4dof.cc  example_planner_4dof_node.cc  example_planner_6dof.cc  example_planner_6dof_node.cc  example_planner_node.cc  planner_4dof_pybindings.cc
mav_trajectory_generation_sa/src/pybindings/: trajectory_planner_4dof.cc  trajectory_planner_4dof_pybindings.cc
mav_trajectory_generation_sa/test/: test_polynomial.cpp  test_polynomial_optimization.cpp  test_trajectory.csv  test_trajectory_planner.py
